<resources>
    <string name="app_name">CO-JJMPOLY</string>
    <string name="text_timetable">Time Table</string>
    <string name="text_notice">Notic Board</string>
    <string name="text_department">Department</string>
    <string name="text_events">Events</string>
    <string name="text_about">About</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_department">Department</string>
    <string name="title_activity_notice_board">Notice Board</string>
    <string name="title_activity_upcoming_events">Upcoming Events</string>
    <string name="sy_time_table">Second Year Time Table</string>
    <string name="ty_time_table">Third Year Time Table</string>
    <string name="downloadButton">Download APK</string>
    <string name="text_contacts">Contacts</string>
    <string name="text_message">Messages</string>
    <string name="title_activity_notic_board">Notic Board</string>
    <string name="title_activity_contacts">Important Contacts</string>
    <string name="title_activity_messages">Messages</string>
    <string name="myTextView">Designed and Developed by Prathamesh P. More (2017-2018)</string>
    <string name="myTextView1">Computer Engineering Department of Dr. J. J. Magdum Polytechnic, Jaysingpur</string>
    <string name="myTextView2">Version : 1.0 (2017)</string>
    <string name="downloadQR">Scan for Download</string>
    <string name="buttonFacebook">Facebook</string>
    <string name="buttonTwitter">Twitter</string>
    <string name="text_technews">Tech News</string>
    <string name="text_info">Used Tools</string>
    <string name="title_activity_tech_news">Tech News</string>
    <string name="technewsTitle">"Top 10 Tech News Websites</string>
    <string name="title_activity_used_tools">Used Tools</string>
    <string name="fy_time_table">First Year Time Table</string>
    <string name="tools">Tools : Android Studio 2.2.3 , Android SDK 25 , Windows 10 , Genymotion Virtual Device. Learning Resource : YouTube. Database : Firebase. Libraries : Picasso Library.</string>
    <string name="welcome_to_computer_department">Welcome to COMPUTER DEPARTMENT</string>
    <string name="text_complaint">Complaints</string>
    <string name="title_activity_complaints">Complaints</string>
    <string name="submit">Submit</string>
    <string name="text_complaint_text">Submit Your Complaint to Department</string>
    <string name="signUp">Get Sign Up for Computer Department</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Already Have An Account?</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="me">Design and Developed By Prathamesh More</string>
    <string name="feedback">Feedback always welcome : moreprathameshmore@hotmail.com</string>
    <string name="logOut">Log Out</string>
    <string name="banner_ad_unit_id">pub-9370043571819984</string>

</resources>
