<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jjmpoly.prathameshmore.com.co_jjmpoly.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:background="@drawable/conrners_outline"
            android:fontFamily="monospace"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:background="@drawable/conrners_outline"
            android:fontFamily="monospace"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/sign_up"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white_color"/>

        <Button
            android:id="@+id/btnBackToSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/sign_in"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white_color"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/feedback"/>


    </LinearLayout>

</RelativeLayout>
