<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_time_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jjmpoly.prathameshmore.com.co_jjmpoly.TimeTable"
    tools:showIn="@layout/activity_time_table">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fy_time_table"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                android:fontFamily="casual" />
            <ImageView
                android:id="@+id/fyTimeTableImageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/error"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sy_time_table"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                android:fontFamily="casual" />
            <ImageView
                android:id="@+id/syTimeTableImageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/error"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ty_time_table"
               android:textSize="20sp"
               android:textStyle="normal|bold|italic"
               android:fontFamily="casual" />

            <ImageView
                android:id="@+id/tyTimeTableImageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/error"
                />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
